--- a/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -27,14 +27,14 @@
         }
     </style>
 </head>
-<body style="background:#fff">
+<body style="background:linear-gradient(225deg, rgba(0,0,0,1) 0%, rgba(19,105,118,1) 0%, rgba(46,20,55,1) 100%)">
     <div class="loader"></div>
     <div id="app">
         <section class="section" id="LoginBg">
             <div class="container mt-5">
                 <div class="row">
                     <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-6 offset-xl-3">
-                        <div class="card card-primary overflow-hidden">
+                        <div class="card card-primary overflow-hidden" style="box-shadow:0 0 26px #000000;">
                             <div class="card-header text-center d-block">
                                 @*<h3 class="mb-0">Login</h3>*@
                                 <img style="height:63px; margin:auto;" src="/assetsAdmin/img/user.png" alt="logo" />
