--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -443,14 +443,19 @@
         position: relative;
     }
     #congratulation .modal-content .modal-body img{
-        width:104px;
+       width: 104px;
         position: absolute;
-        left: 38%;
+        left: 0;
+        right: 0;
         bottom: 16%;
+        text-align: center;
+        margin: auto;
     }
         #congratulation .modal-content .modal-body h4 {
             position: absolute;
-            left: 39%;
+            left:0px;
+            right:0px;
+            text-align:center;
             bottom: 6%;
             color: #000;
             font-family: ui-serif;
